welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: missing parameter type
		if(x=>3)
                   ^